tests/no_compile/bad_inner_attr.stderr
error: `#[mmio(...)]` only supports 'Inner', 'Read', 'PureRead', 'Write', and 'Modify' options
 --> tests/no_compile/bad_inner_attr.rs:4:5
  |
4 |     #[mmio(RW)]
  |     ^
