tests/no_compile/bad_inner_attr.rs
#[derive(derive_mmio::Mmio)]
#[repr(C)]
struct Uart {
    #[mmio(RW)]
    status: u32,
}

fn main() {
}
